[gd_scene load_steps=2 format=3 uid="uid://lc57evjjefum"]

[ext_resource type="Script" uid="uid://qm5dpr7qsfs" path="res://GD/UI/PauseControl.gd" id="1_wrua7"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wrua7")
pauseMenu = true

[node name="Continue" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -248.0
offset_right = 128.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -144.0
offset_right = 128.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 0
text = "Settings"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -48.0
offset_right = 128.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit To Main Menu"

[connection signal="button_up" from="Continue" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
